# NumericalMethods

./: .gitignor  .gitignore  readme.md
Approximation/Code/: GaussMethod.cpp  GaussMethod.hpp  Ln.cpp  Ln.hpp  Makefile  Pn.cpp  Pn.hpp  app  knots.cpp  main.cpp  printAll.gpi  te.txt
Approximation/Code/TestData/: abs1000ch.txt  logpol10.txt  logpol100.txt  logpol1000ch.txt  logpol100ch.txt  logpol10ch.txt  logpol20.txt  logpol20ch.txt  logpol5.txt  logpol50.txt  logpol5ch.txt  p10.txt  p10ch.txt  runge15.txt  runge15ch.txt  runge30.txt  runge30ch.txt  (+2 more)
Approximation/Report/: Report.aux  Report.fdb_latexmk  Report.fls  Report.tex
Differential Equations/Code/: CMakeLists.txt
Differential Equations/Code/src/: libs.c  main.c  main.h  out.txt  restable.tex
Differential Equations/Report/: Report.tex
FourierAndSweep2orderDE/Code/: CMakeLists.txt  Pictures.ipynb
FourierAndSweep2orderDE/Code/src/: DiffEqFourier.c  DiffEqSweep.c  FourierMethod.c  FourierMethod.h  SweepMethod.c  SweepMethod.h
FourierAndSweep2orderDE/Report/: Report.tex
FourierApproximation/Code/: Solution.c  a.out  main.c  test1.txt  test2.txt
FourierApproximation/Report/: Report.aux  Report.fdb_latexmk
GradU/Code/: CMakeLists.txt  GradU.ipynb  solution_pict.ipynb
GradU/Report/: Report.tex
LinAlg/: LS1  LS2  LS3  Makefile  inp.txt  inp1.txt  out.txt  solution.c  solution.h  test2.c  test3.c
LinAlg/Code/: LS1  LS2  LS3  Makefile  out.txt  out3.txt  printError2.gpi  printError3.gpi  solution.c  solution.h  test1.c  test2.c  test3.c
LinAlg/Report/: Report.aux  Report.dvi  Report.tex
NumericalIntegration/1d/: Makefile  Solution.c  Solution.h  points.txt  printDependence.gpi  t1  t1tests.c  t2  t2tests.c
NumericalIntegration/2d/: Makefile  Solution.c  Solution.h  points.txt  printDependence.gpi  t1.txt  t3  t3tests.c  t4  t4tests.c
NumericalIntegration/Report/: Report.aux  Report.fdb_latexmk  Report.fls  Report.tex
Offtop/: nelder_mead.ipynb
PDE/Code/: CMakeLists.txt  Pictures.ipynb  test.sh
PDE/Code/Test good case/: Pictures.ipynb  test.sh
PDE/Code/Test regularization/: Pictures.ipynb  test.sh
PDE/Code/src/: PDE.c  PDEBadType.c  PDEBadTypeR.c  SweepMethod.h  declarations.h
PDE/Report/: Report.tex
PDE2d/: output.txt
PDE2d/Code/: 2dFourierApprox.c  CMakeLists.txt  Makefile  fourieApprox.sh  main.c  main.h  pcalculation.h  solution_pict.ipynb  test.sh  test_bf.ipynb  test_nzf.ipynb
PDE2d/Code/2dFourierApproxTest/: 2dFourierApprox.c  app  approx.txt  error.txt  main.c  nm  pcalculation.c  printAll.gpi  printDependence.gpi  test.sh
PDE2d/Code/src/: 2dFourierApprox.c  2dFourierApprox.h  PDE2dSolver.c  PDE2dSolver.h  double_to_int.c  out.txt  test.ipynb
PDE2d/Code/src/tests/: BasicFunctionTest.c  Nonzerof.c  NonzerofSolution.c  tests.h
PDE2d/Report/: Report.tex
ParallelProgAndMatrices/Eigenval/: Makefile  Matrix.cpp  Matrix.hpp  QRRefl.cpp  QRRefl.hpp  ev  main.cpp  vector.cpp  vector.hpp
ParallelProgAndMatrices/Parallel Gauss/: .inp.txt.swp  Makefile  PGaus.c  PGaus.h  ReadPrint.c  ReadPrint.h  main.c  pg
ParallelProgAndMatrices/SolveSystem/: GausMethod.cpp  GausMethod.hpp  Makefile  Matrix.cpp  Matrix.hpp  gm  main.cpp  vector.hpp
RungeKutty/Code/: CMakeLists.txt
RungeKutty/Code/src/: Scheme.c  Scheme.h  Useful.c  Useful.h  solution.c  t1.c  t2.c  t3.c  t4.c  t5.c
RungeKutty/Report/: Report.tex
(+77 files in other folders)
